[package]
name = "oram"
version = "0.2.0-pre.1"
edition = "2024"
repository = "https://github.com/facebook/oram"
description = "An implementation of Oblivious RAM."
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["oram", "oblivious", "cryptography"]
categories = ["cryptography"]


[dependencies]
subtle = "2"
rand = "0.9"
log = "0.4"
thiserror = "2"
static_assertions = "1"
simplelog = "0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rustyline = "14"
paste = "1"

[features]

do_not_cache_block_values = []
direct_accesses_in_off_mode = ["do_not_cache_block_values"]
exact_locations_in_position_map = ["direct_accesses_in_off_mode"]
exact_locations_in_position_map_and_batch_position_map = ["exact_locations_in_position_map"]
batched_turning_on = []
bypass_oram = []
full_reconstruction = []

[[bench]]
name = "benchmark"
harness = false
